--- a/modules/repository/src/main/res/navigation/repo_detail.xml
+++ b/modules/repository/src/main/res/navigation/repo_detail.xml
@@ -29,6 +29,12 @@
             app:argType="integer[]"
             />
 
+        <argument
+            android:name="tabTitles"
+            android:defaultValue="@null"
+            app:nullable="true"
+            app:argType="string[]"/>
+
     </fragment>
 
 </navigation>
