--- a/baselib/res/src/main/res/values/dimens.xml
+++ b/baselib/res/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="common_icon_width_material">48dp</dimen>
     <dimen name="content_margin_horizontal_material">72dp</dimen>
     <dimen name="content_margin_vertical_material">72dp</dimen>
+    <dimen name="actionbar_margin_vertical_material">40dp</dimen>
 
     <!--  toolbar  -->
     <dimen name="toolbar_collapsing_content_height">128dp</dimen>
