--- a/baselib/pager/src/main/res/navigation/pager.xml
+++ b/baselib/pager/src/main/res/navigation/pager.xml
@@ -3,24 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/code"
-    app:startDestination="@+id/repo_detail">
+    app:startDestination="@+id/pager"
+    tools:ignore="UnusedNavigation">
 
-    <fragment android:id="@+id/repo_detail"
-        android:name="com.tangpj.repository.ui.detail.RepoDetailFragment"
+    <fragment android:id="@+id/pager"
+        android:name="com.tangpj.pager.PagerFragment"
         app:defaultNavHost="true"
-        tools:layout="@layout/fragment_repo_detail">
+        tools:layout="@layout/fragment_pager">
 
         <argument
-            android:name="repoDetailQuery"
+            android:name="params"
             android:defaultValue="@null"
             app:nullable="true"
-            app:argType="com.tangpj.repository.valueObject.query.RepoDetailQuery"/>
-
-        <argument
-            android:name="branch"
-            android:defaultValue="master"
-            app:argType="string"
-            />
+            app:argType="android.os.Bundle"/>
 
         <argument
             android:name="graphIds"
