--- a/baselib/res/src/main/res/values/theme_app.xml
+++ b/baselib/res/src/main/res/values/theme_app.xml
@@ -19,6 +19,8 @@
         <item name="colorSecondaryText">@color/secondaryTextColorNormal</item>
         <item name="colorNavigationIcon">@color/navigationIconColorNormal</item>
 
+        <item name="colorLine">@color/lineColorNormal</item>
+
         <item name="expandedTitleTextAppearance">@style/TextAppearance.Adaptive.Headline5</item>
     </style>
 
@@ -39,6 +41,8 @@
         <item name="colorPrimaryText">@color/primaryTextColorNight</item>
         <item name="colorSecondaryText">@color/secondaryTextColorNormal</item>
         <item name="colorNavigationIcon">@color/navigationIconColorNormal</item>
+
+        <item name="colorLine">@color/lineColorNight</item>
 
         <item name="expandedTitleTextAppearance">@style/TextAppearance.Adaptive.Headline5</item>
 
