--- a/baselib/res/src/main/res/values/theme_app_attrs.xml
+++ b/baselib/res/src/main/res/values/theme_app_attrs.xml
@@ -20,5 +20,7 @@
     <!--  icon color  -->
     <attr name="colorNavigationIcon" format="color|reference"/>
 
+    <!--  line color  -->
+    <attr name="colorLine" format="color|reference"/>
 
 </resources>
