--- a/baselib/res/src/main/res/values/theme_color.xml
+++ b/baselib/res/src/main/res/values/theme_color.xml
@@ -15,6 +15,8 @@
     <color name="secondaryTextColorNormal">#000000</color>
     <color name="navigationIconColorNormal">#000000</color>
 
+    <color name="lineColorNormal">#EAEAEA</color>
+
     <!-- 夜间主题 -->
     <color name="primaryColorNight">#212121</color>
     <color name="primaryColorLightNight">#484848</color>
@@ -28,5 +30,7 @@
 
     <color name="secondaryTextColorNight">#ffffff</color>
     <color name="navigationIconColorNight">#ffffff</color>
+
+    <color name="lineColorNight">@color/navigationIconColorNight</color>
 
 </resources>
