--- a/modules/repository/src/main/res/navigation/repo_detail.xml
+++ b/modules/repository/src/main/res/navigation/repo_detail.xml
@@ -42,7 +42,8 @@
     </fragment>
 
     <include
-        app:graph="@navigation/refs"
+        app:graph="@navigation/dialog_container"
         />
+
 
 </navigation>
