--- a/baselib/github_base/src/main/res/layout/page_loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/page_loading_state.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.tangpj.recurve.resource.Status"/>
-        <import type="com.tangpj.paging.Listing"/>
+        <import type="com.recurve.core.resource.Status"/>
+        <import type="com.recurve.paging.Listing"/>
         <import type="kotlin.jvm.functions.Function0"/>
 
         <variable
