fix FilesFragment bug

--- a/modules/repository/src/main/res/navigation/repo_files.xml
+++ b/modules/repository/src/main/res/navigation/repo_files.xml
@@ -19,6 +19,8 @@
 
         <argument
             android:name="repoDetailQuery"
+            android:defaultValue="@null"
+            app:nullable="true"
             app:argType="com.tangpj.repository.valueObject.query.RepoDetailQuery"/>
 
         <argument
